<resources>
    <string name="app_name">Metropolia Mixer</string>

    <!--<string name=""></string>-->

    <!--Fragment Labels -->
    <string name="register_fragment_label">Register</string>
    <string name="sign_up_fragment_label">Register</string>
    <string name="sign_in_fragment_label">Sign In</string>
    <string name="favourites_fragment_label">Favourites</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="forgot_password_fragment_label">Forgot Password</string>
    <string name="recipes_fragment_label">Recipes</string>
    <string name="recipe_fragment_label">{drinkName}</string>
    <string name="recipes_tab_label">Recipes</string>

    <!--Tab Labels -->
    <string name="favourites_tab_label">Favourites</string>
    <string name="profile_tab_label">Profile</string>

    <!--Headers -->
    <string name="ingredients_header">Ingredients</string>
    <string name="how_to_mix_header">HOW TO MIX</string>
    <string name="sign_in_header">Sign In</string>
    <string name="register_header">Register</string>
    <string name="forgot_password_header">Forgot Password</string>

    <!--Input Header -->
    <string name="email_input_header">Email</string>
    <string name="username_input_header">Username</string>
    <string name="password_input_header">Password</string>
    <string name="confirm_password_input_header">Confirm Password</string>

    <!--Button Texts-->
    <string name="register_btn_txt">Register</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="as_guest_btn_txt">Continue as guest*</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in_action_txt">Sign In</string>
    <string name="register_action_txt">Register</string>
    <string name="forgot_password_action_txt">Forgot Password?</string>
    <string name="send_recovery_email_btn_txt">Send Recovery Email</string>

    <!--Texts -->
    <string name="glass_txt">Glass: </string>
    <string name="method_txt">Method: </string>
    <string name="garnish_txt">Garnish: </string>
    <string name="as_guest_explainer">* Continues as guest in browser</string>
    <string name="no_favorites">You have 0 liked drinks. Open a drink recipe and click the like button and it will appear here</string>
    <string name="spinner_lasts_too_long">If this spinner lasts for more than 10 seconds check your internet connection.</string>
    <string name="gathering_information">Gathering Information...</string>
    <string name="search_drinks">search drinks</string>

    <!--Placeholders -->

    <!--Other -->
    <string name="cles_du_tresor">jwt</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>