<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/startupFragment">

    <fragment
        android:id="@+id/startupFragment"
        android:name="com.example.mixer_logic_kt.StartupFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_startup">
        <action
            android:id="@+id/action_startupFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_startupFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.mixer_logic_kt.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment2"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.mixer_logic_kt.FavoritesFragment"
        android:label="@string/favourites_fragment_label"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mixer_logic_kt.LoginFragment"
        android:label="@string/sign_up_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.mixer_logic_kt.RecipesFragment"
        android:label="@string/recipes_fragment_label"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_recipesFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>
</navigation>