<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/recipes_tab"
        android:icon="@drawable/ic_cocktail_glass"
        android:title="@string/recipes_tab_label" />
    <item
        android:id="@+id/favourites_tab"
        android:icon="@drawable/ic_test_icon_1"
        android:title="@string/favourites_tab_label" />
    <item
        android:id="@+id/profile_tab"
        android:icon="@drawable/ic_person"
        android:title="@string/profile_tab_label" />

<!--    <item
        android:id="@+id/recipes_tab"
        android:icon="@drawable/ic_cocktail_glass"
        android:title="@string/recipes_tab_label" />
    <item
        android:id="@+id/favourites_tab"
        android:icon="@drawable/ic_test_icon_1"
        android:title="@string/favourites_tab_label" />-->
<!--    <item
        android:id="@+id/profile_tab"
        android:icon="@drawable/ic_person"
        android:title="@string/profile_tab_label" />-->
</menu>