<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Auth.ForgotPasswordFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="25dp"
        app:contentPaddingBottom="70dp"
        app:cardBackgroundColor="@color/purple_50"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Header -->
            <TextView
                android:id="@+id/forgot_password_header"
                style="@style/Widget.MixerLogic.H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingTop="10dp"
                android:text="@string/forgot_password_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Explainer -->
            <TextView
                android:id="@+id/forgot_password_explainer_tv"
                style="@style/Widget.MixerLogic.BasicText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_header"
                tools:text="@string/forgot_password_explainer" />

            <!--Input, label and error -->
            <TextView
                android:id="@+id/error_forgot_password_tv"
                style="@style/Widget.MixerLogic.BasicText"
                android:textColor="@color/warning_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="some error occurred"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_explainer_tv" />

            <TextView
                android:id="@+id/username_input_label"
                style="@style/Widget.MixerLogic.InputLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingEnd="10dp"
                android:text="@string/email_input_header"
                app:layout_constraintStart_toStartOf="@+id/editText_forgotten_pass_email"
                app:layout_constraintTop_toBottomOf="@+id/error_forgot_password_tv" />


            <EditText
                android:id="@+id/editText_forgotten_pass_email"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="25dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/input_background"

                app:layout_constraintTop_toBottomOf="@id/username_input_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="55dp" />

            <!-- Button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_recovery_email_btn"
                style="@style/Widget.MixerLogic.RoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_primary"
                android:minWidth="200dp"
                android:text="@string/send_recovery_email_btn_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_forgotten_pass_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>